--- a/Index.html
+++ b/Index.html
@@ -1,382 +1,237 @@
-/* 기본 설정 */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
+<!DOCTYPE html>
+<html lang="ko">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>임지훈 · Career Portfolio</title>
+  <link rel="stylesheet" href="style.css" />
+  <meta name="description" content="임지훈 경력 및 프로젝트 포트폴리오 사이트" />
+</head>
+<body>
+  <!-- 상단 네비게이션 -->
+  <header class="header">
+    <div class="container header__inner">
+      <div class="logo">IM JIHOON</div>
+      <nav class="nav">
+        <a href="#about">About</a>
+        <a href="#experience">Experience</a>
+        <a href="#projects">Projects</a>
+        <a href="#skills">Skills</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </div>
+  </header>
 
-html {
-  scroll-behavior: smooth;
-}
+  <!-- 히어로 섹션 -->
+  <main>
+    <section class="hero">
+      <div class="container hero__inner">
+        <div class="hero__text">
+          <p class="hero__eyebrow">Career Portfolio</p>
+          <!-- 여기 한 줄 소개 문구만 나중에 바꾸시면 됩니다 -->
+          <h1 class="hero__title">
+            아랍어·국제정치·콘텐츠를 잇는<br />
+            <span class="hero__highlight">임지훈</span>입니다.
+          </h1>
+          <p class="hero__subtitle">
+            언어와 글로벌 경험을 기반으로, 여행·교육·디지털 콘텐츠를 설계하고 있습니다.
+            이 사이트는 저의 경험, 프로젝트, 그리고 앞으로의 방향을 한눈에 볼 수 있도록 정리한 공간입니다.
+          </p>
+          <div class="hero__actions">
+            <!-- 메일 주소는 나중에 실제 메일로 바꾸시면 됩니다 -->
+            <a href="#contact" class="btn btn--primary">함께 이야기해요</a>
+            <a href="#projects" class="btn btn--ghost">프로젝트 보기</a>
+          </div>
+        </div>
+      </div>
+    </section>
 
-body {
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-    sans-serif;
-  color: #111827;
-  background-color: #f3f4f6;
-}
+    <!-- About 섹션 -->
+    <section id="about" class="section section--light">
+      <div class="container section__inner">
+        <h2 class="section__title">About</h2>
+        <p class="section__subtitle">
+          자기소개와 현재 하고 있는 일, 관심 분야를 간단하게 적는 공간입니다.
+        </p>
+        <div class="about__grid">
+          <div class="about__main">
+            <!-- 이 문단들을 본인 소개에 맞게 수정하시면 됩니다 -->
+            <p>
+              저는 한국외국어대학교에서 아랍어와 국제정치를 공부하며,
+              언어·문화·여행·디지털 콘텐츠를 연결하는 일에 큰 흥미를 가지고 있습니다.
+            </p>
+            <p>
+              사우디, 베트남, 중앙아시아 등 다양한 지역에 대한 관심을 바탕으로
+              여행 콘텐츠 제작, 국제 교류 프로그램 참여, 프로젝트 기획을 경험해 왔습니다.
+            </p>
+            <p>
+              이 사이트는 저의 학업·대외활동·개인 프로젝트를 정리해,
+              함께 협업할 수 있는 사람들에게 제 역량을 명확하게 보여주기 위해 만들었습니다.
+            </p>
+          </div>
+          <div class="about__meta">
+            <ul class="about__list">
+              <li><span>이름</span><strong>임지훈</strong></li>
+              <li><span>전공</span><strong>아랍어 / 국제학</strong></li>
+              <li><span>관심 분야</span><strong>여행·콘텐츠, 국제교류, 언어교육</strong></li>
+              <li><span>거주지</span><strong>대한민국, 서울</strong></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
 
-/* 공통 레이아웃 */
-.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  padding: 0 1.5rem;
-}
+    <!-- Experience 섹션 -->
+    <section id="experience" class="section">
+      <div class="container section__inner">
+        <h2 class="section__title">Experience</h2>
+        <p class="section__subtitle">
+          인턴십, 대외활동, 프로그램 참여 등 주요 경험들을 연표 형태로 정리하는 구간입니다.
+        </p>
 
-.section {
-  padding: 5rem 0;
-  background-color: #ffffff;
-}
+        <div class="timeline">
+          <!-- 항목 하나씩 복사해서 추가하시면 됩니다 -->
+          <article class="timeline__item">
+            <div class="timeline__meta">
+              <span class="timeline__period">2026.01 – 2026.03 (예정)</span>
+              <span class="timeline__location">사우디아라비아 · 리야드</span>
+            </div>
+            <h3 class="timeline__title">킹살만 글로벌 아카데미 단기 몰입 프로그램 (Tourism 코스)</h3>
+            <p class="timeline__desc">
+              사우디의 관광·문화·언어를 집중적으로 경험하는 단기 몰입 프로그램에 참가 예정입니다.
+              현지에서의 언어·문화 체험을 바탕으로 여행 및 교육 콘텐츠로 확장할 계획입니다.
+            </p>
+          </article>
 
-.section--light {
-  padding: 5rem 0;
-  background-color: #f9fafb;
-}
+          <article class="timeline__item">
+            <div class="timeline__meta">
+              <span class="timeline__period">2023 – 현재</span>
+              <span class="timeline__location">한국외국어대학교</span>
+            </div>
+            <h3 class="timeline__title">아랍어 및 국제학 전공</h3>
+            <p class="timeline__desc">
+              아랍어 어학, 중동 지역 연구, 국제정치·국제법 등의 과목을 수강하며
+              언어 능력과 글로벌 이슈에 대한 이해를 함께 쌓고 있습니다.
+            </p>
+          </article>
 
-.section__inner {
-  display: flex;
-  flex-direction: column;
-  gap: 1.75rem;
-}
+          <!-- TODO: 여기 아래로 대외활동/인턴/프로젝트 경험을 계속 추가하시면 됩니다 -->
+        </div>
+      </div>
+    </section>
 
-.section__title {
-  font-size: 1.7rem;
-  font-weight: 700;
-  margin: 0;
-}
+    <!-- Projects 섹션 -->
+    <section id="projects" class="section section--light">
+      <div class="container section__inner">
+        <h2 class="section__title">Projects</h2>
+        <p class="section__subtitle">
+          블로그, 유튜브, 웹사이트, 연구 과제 등 보여주고 싶은 작업들을 모아두는 공간입니다.
+        </p>
 
-.section__subtitle {
-  margin: 0;
-  color: #6b7280;
-  max-width: 640px;
-}
+        <div class="cards">
+          <!-- 프로젝트 카드 예시 1 -->
+          <article class="card">
+            <h3 class="card__title">여행 다이어리 & 베트남 전국 일주 콘텐츠</h3>
+            <p class="card__meta">Travel · Content · 개인 프로젝트</p>
+            <p class="card__desc">
+              베트남 전국 일주 경험을 바탕으로 여행 다이어리 템플릿과
+              블로그/영상 콘텐츠를 제작했습니다. 실제 여행자에게 도움이 되는
+              정보와 기록 방식을 고민했습니다.
+            </p>
+            <!-- 여기에 나중에 GitHub / 블로그 / 유튜브 링크를 추가할 수 있습니다 -->
+          </article>
 
-/* 헤더 & 네비게이션 */
-.header {
-  position: sticky;
-  top: 0;
-  z-index: 50;
-  backdrop-filter: blur(14px);
-  background: rgba(249, 250, 251, 0.8);
-  border-bottom: 1px solid rgba(209, 213, 219, 0.6);
-}
+          <!-- 프로젝트 카드 예시 2 -->
+          <article class="card">
+            <h3 class="card__title">아랍어 학습용 웹사이트 (개인 학습용)</h3>
+            <p class="card__meta">Web · Language Learning</p>
+            <p class="card__desc">
+              아랍어 알파벳, 단어, 문장을 필사하고 연습할 수 있는
+              개인용 학습 사이트를 기획하고 개발 중입니다.
+            </p>
+          </article>
 
-.header__inner {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0.9rem 1.5rem;
-}
+          <!-- 필요하면 카드 계속 복사/추가 -->
+        </div>
+      </div>
+    </section>
 
-.logo {
-  font-weight: 700;
-  letter-spacing: 0.16em;
-  font-size: 0.9rem;
-  text-transform: uppercase;
-}
+    <!-- Skills 섹션 -->
+    <section id="skills" class="section">
+      <div class="container section__inner">
+        <h2 class="section__title">Skills</h2>
+        <p class="section__subtitle">
+          언어, 도구, 관심 분야를 한눈에 볼 수 있도록 정리합니다.
+        </p>
 
-.nav {
-  display: flex;
-  gap: 1rem;
-  font-size: 0.9rem;
-}
+        <div class="skills__grid">
+          <div>
+            <h3 class="skills__title">Languages</h3>
+            <div class="tag-list">
+              <span class="tag">한국어 (Native)</span>
+              <span class="tag">영어</span>
+              <span class="tag">아랍어</span>
+              <span class="tag">베트남어 (학습 중)</span>
+            </div>
+          </div>
+          <div>
+            <h3 class="skills__title">Tools & Tech</h3>
+            <div class="tag-list">
+              <span class="tag">GitHub Pages</span>
+              <span class="tag">HTML / CSS</span>
+              <span class="tag">Notion</span>
+              <span class="tag">영상 편집</span>
+            </div>
+          </div>
+          <div>
+            <h3 class="skills__title">Interests</h3>
+            <div class="tag-list">
+              <span class="tag">여행 콘텐츠</span>
+              <span class="tag">국제교류 프로그램</span>
+              <span class="tag">중동·베트남 지역 연구</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-.nav a {
-  text-decoration: none;
-  color: #4b5563;
-  padding: 0.35rem 0.6rem;
-  border-radius: 999px;
-  transition: background-color 0.15s ease, color 0.15s ease;
-}
+    <!-- Contact 섹션 -->
+    <section id="contact" class="section section--light">
+      <div class="container section__inner">
+        <h2 class="section__title">Contact</h2>
+        <p class="section__subtitle">
+          함께 이야기해보고 싶으시다면 아래 채널로 연락해 주세요.
+        </p>
 
-.nav a:hover {
-  background-color: #111827;
-  color: #f9fafb;
-}
+        <div class="contact__box">
+          <!-- 이메일 주소는 실제 사용하시는 메일로 바꿔주세요 -->
+          <p class="contact__item">
+            이메일:
+            <a href="mailto:example@email.com">example@email.com</a>
+          </p>
+          <!-- 필요시 블로그/유튜브/링크드인 등을 추가 -->
+          <!--
+          <p class="contact__item">
+            블로그: <a href="#" target="_blank">블로그 링크</a>
+          </p>
+          <p class="contact__item">
+            유튜브: <a href="#" target="_blank">유튜브 채널</a>
+          </p>
+          -->
+        </div>
+      </div>
+    </section>
+  </main>
 
-/* 히어로 섹션 */
-.hero {
-  padding: 5rem 0 3.5rem;
-  background: radial-gradient(circle at top left, #e0f2fe 0, #eff6ff 40%, #f9fafb 100%);
-  border-bottom: 1px solid #e5e7eb;
-}
+  <footer class="footer">
+    <div class="container footer__inner">
+      <p>© <span id="year"></span> IM JIHOON. All rights reserved.</p>
+    </div>
+  </footer>
 
-.hero__inner {
-  display: flex;
-  flex-direction: column;
-  gap: 2rem;
-}
-
-.hero__text {
-  max-width: 720px;
-}
-
-.hero__eyebrow {
-  font-size: 0.85rem;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: #6b7280;
-  margin: 0 0 0.5rem;
-}
-
-.hero__title {
-  font-size: clamp(2rem, 4vw, 2.6rem);
-  line-height: 1.3;
-  margin: 0 0 1rem;
-}
-
-.hero__highlight {
-  background: linear-gradient(120deg, #2563eb, #16a34a);
-  -webkit-background-clip: text;
-  color: transparent;
-}
-
-.hero__subtitle {
-  margin: 0 0 1.5rem;
-  color: #4b5563;
-}
-
-.hero__actions {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.75rem;
-}
-
-/* 버튼 스타일 */
-.btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0.7rem 1.3rem;
-  border-radius: 999px;
-  font-size: 0.95rem;
-  font-weight: 500;
-  text-decoration: none;
-  cursor: pointer;
-  border: 1px solid transparent;
-  transition: background-color 0.15s ease, color 0.15s ease,
-    border-color 0.15s ease, transform 0.05s ease;
-}
-
-.btn--primary {
-  background-color: #111827;
-  color: #f9fafb;
-}
-
-.btn--primary:hover {
-  background-color: #000000;
-  transform: translateY(-1px);
-}
-
-.btn--ghost {
-  background-color: transparent;
-  color: #111827;
-  border-color: #d1d5db;
-}
-
-.btn--ghost:hover {
-  background-color: #e5e7eb;
-}
-
-/* About 섹션 */
-.about__grid {
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 2rem;
-  align-items: flex-start;
-}
-
-.about__main p {
-  margin-top: 0;
-  margin-bottom: 0.9rem;
-  line-height: 1.6;
-  color: #374151;
-}
-
-.about__meta {
-  background-color: #ffffff;
-  border-radius: 1rem;
-  border: 1px solid #e5e7eb;
-  padding: 1.3rem 1.2rem;
-}
-
-.about__list {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  display: grid;
-  gap: 0.7rem;
-}
-
-.about__list li {
-  display: flex;
-  flex-direction: column;
-  font-size: 0.9rem;
-}
-
-.about__list span {
-  color: #9ca3af;
-  font-size: 0.78rem;
-  text-transform: uppercase;
-  letter-spacing: 0.08em;
-}
-
-.about__list strong {
-  color: #111827;
-}
-
-/* Timeline (Experience) */
-.timeline {
-  display: grid;
-  gap: 1.5rem;
-  margin-top: 0.5rem;
-}
-
-.timeline__item {
-  padding: 1.4rem 1.3rem;
-  border-radius: 1rem;
-  border: 1px solid #e5e7eb;
-  background-color: #f9fafb;
-}
-
-.timeline__meta {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem 1rem;
-  font-size: 0.8rem;
-  color: #6b7280;
-  margin-bottom: 0.4rem;
-}
-
-.timeline__title {
-  font-size: 1rem;
-  margin: 0 0 0.4rem;
-}
-
-.timeline__desc {
-  margin: 0;
-  font-size: 0.9rem;
-  color: #4b5563;
-  line-height: 1.6;
-}
-
-/* Projects - 카드 레이아웃 */
-.cards {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-  gap: 1.5rem;
-  margin-top: 0.5rem;
-}
-
-.card {
-  background-color: #ffffff;
-  border-radius: 1rem;
-  border: 1px solid #e5e7eb;
-  padding: 1.4rem 1.3rem;
-  display: flex;
-  flex-direction: column;
-  gap: 0.4rem;
-}
-
-.card__title {
-  margin: 0;
-  font-size: 1rem;
-}
-
-.card__meta {
-  margin: 0;
-  font-size: 0.8rem;
-  color: #6b7280;
-}
-
-.card__desc {
-  margin: 0.2rem 0 0;
-  font-size: 0.9rem;
-  color: #4b5563;
-  line-height: 1.6;
-}
-
-/* Skills */
-.skills__grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-  gap: 1.5rem;
-  margin-top: 0.5rem;
-}
-
-.skills__title {
-  margin: 0 0 0.5rem;
-  font-size: 1rem;
-}
-
-.tag-list {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 0.5rem;
-}
-
-.tag {
-  font-size: 0.8rem;
-  padding: 0.35rem 0.7rem;
-  border-radius: 999px;
-  background-color: #e5e7eb;
-  color: #111827;
-}
-
-/* Contact */
-.contact__box {
-  margin-top: 0.75rem;
-  padding: 1.3rem 1.2rem;
-  border-radius: 1rem;
-  border: 1px solid #e5e7eb;
-  background-color: #ffffff;
-}
-
-.contact__item {
-  margin: 0 0 0.5rem;
-  font-size: 0.95rem;
-}
-
-.contact__item a {
-  color: #2563eb;
-  text-decoration: none;
-}
-
-.contact__item a:hover {
-  text-decoration: underline;
-}
-
-/* Footer */
-.footer {
-  border-top: 1px solid #e5e7eb;
-  background-color: #f9fafb;
-}
-
-.footer__inner {
-  padding: 1rem 1.5rem;
-  text-align: center;
-  font-size: 0.8rem;
-  color: #9ca3af;
-}
-
-/* 반응형 */
-@media (max-width: 768px) {
-  .header__inner {
-    padding-inline: 1rem;
-  }
-
-  .nav {
-    gap: 0.4rem;
-    font-size: 0.8rem;
-  }
-
-  .hero {
-    padding-top: 4rem;
-  }
-
-  .about__grid {
-    grid-template-columns: 1fr;
-  }
-}
+  <script>
+    // 푸터 연도를 자동으로 현재 연도로 설정
+    document.getElementById('year').textContent = new Date().getFullYear();
+  </script>
+</body>
+</html>
