--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>임지훈 · Career Portfolio</title>
+  <title>임지훈 · Career Index</title>
 
   <style>
-    /* 전체 스타일 */
     * { box-sizing: border-box; }
     body {
       margin: 0;
@@ -14,6 +13,7 @@
       background-color: #f3f4f6;
       color: #111827;
     }
+    html { scroll-behavior: smooth; }
 
     .container {
       width: 100%;
@@ -22,105 +22,125 @@
       padding: 0 1.5rem;
     }
 
-    /* Header */
+    /* 상단 최소 헤더 (깔끔하게) */
     .header {
       position: sticky;
       top: 0;
-      background: rgba(249, 250, 251, 0.85);
-      backdrop-filter: blur(14px);
-      border-bottom: 1px solid rgba(209, 213, 219, 0.6);
       z-index: 50;
+      backdrop-filter: blur(14px);
+      background: rgba(249, 250, 251, 0.9);
+      border-bottom: 1px solid rgba(209, 213, 219, 0.6);
     }
     .header__inner {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      padding: 0.9rem 0;
+      padding: 0.7rem 0;
+      font-size: 0.9rem;
     }
     .logo {
       font-weight: 700;
-      font-size: 0.9rem;
       letter-spacing: 0.16em;
     }
-    .nav { display: flex; gap: 1rem; }
+    .nav {
+      display: flex;
+      gap: 0.75rem;
+      font-size: 0.8rem;
+    }
     .nav a {
       text-decoration: none;
-      color: #4b5563;
-      padding: 0.4rem 0.7rem;
-      border-radius: 99px;
+      color: #6b7280;
+      padding: 0.2rem 0.6rem;
+      border-radius: 999px;
       transition: 0.15s;
-      font-size: 0.9rem;
     }
     .nav a:hover {
-      background: #111827;
+      background-color: #111827;
       color: #fff;
     }
 
-    /* Hero */
-    .hero {
-      padding: 5rem 0 3.5rem;
+    /* 1. 메인 인덱스 페이지 */
+    .landing {
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
       background: radial-gradient(circle at top left, #e0f2fe, #eff6ff, #f9fafb);
       border-bottom: 1px solid #e5e7eb;
     }
-    .hero__eyebrow {
-      margin: 0 0 0.5rem;
-      font-size: 0.85rem;
-      letter-spacing: 0.2em;
-      color: #6b7280;
+    .landing__inner {
+      padding: 4rem 0 3rem;
+      display: flex;
+      flex-direction: column;
+      gap: 2.5rem;
     }
-    .hero__title {
-      margin: 0 0 1rem;
-      font-size: clamp(2rem, 4vw, 2.6rem);
+    .landing__title {
+      margin: 0 0 0.5rem;
+      font-size: clamp(2.1rem, 4vw, 2.7rem);
       line-height: 1.3;
     }
-    .hero__highlight {
-      background: linear-gradient(120deg, #2563eb, #16a34a);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-    .hero__subtitle {
-      margin: 0 0 1.5rem;
+    .landing__subtitle {
+      margin: 0;
       color: #4b5563;
-      max-width: 720px;
+      max-width: 620px;
       line-height: 1.6;
     }
-    .hero__actions {
-      display: flex;
-      gap: 0.75rem;
-      flex-wrap: wrap;
+    .landing__index-label {
+      font-size: 0.8rem;
+      letter-spacing: 0.18em;
+      text-transform: uppercase;
+      color: #9ca3af;
     }
-    .btn {
-      padding: 0.7rem 1.3rem;
-      border-radius: 99px;
+    .landing__grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      gap: 1rem;
+      margin-top: 0.5rem;
+    }
+    .index-card {
+      display: block;
       text-decoration: none;
+      padding: 1.3rem 1.2rem;
+      border-radius: 1rem;
+      border: 1px solid #e5e7eb;
+      background-color: #ffffff;
+      transition: 0.18s;
+    }
+    .index-card__title {
       font-size: 0.95rem;
-      border: 1px solid transparent;
-      transition: 0.15s;
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      cursor: pointer;
-    }
-    .btn--primary {
-      background: #111827;
-      color: #fff;
-    }
-    .btn--primary:hover {
-      background: #000;
-    }
-    .btn--ghost {
-      border: 1px solid #d1d5db;
+      font-weight: 600;
+      margin: 0 0 0.25rem;
       color: #111827;
     }
-    .btn--ghost:hover {
-      background: #e5e7eb;
+    .index-card__desc {
+      margin: 0;
+      font-size: 0.8rem;
+      color: #6b7280;
+      line-height: 1.4;
+    }
+    .index-card:hover {
+      transform: translateY(-2px);
+      border-color: #111827;
+      box-shadow: 0 10px 25px rgba(15, 23, 42, 0.12);
     }
 
-    /* Section 공통 */
-    .section { padding: 5rem 0; background: #fff; }
-    .section--light { background: #f9fafb; }
-    .section__title { font-size: 1.7rem; font-weight: 700; margin: 0 0 0.5rem; }
-    .section__subtitle { color: #6b7280; max-width: 640px; margin: 0 0 1.5rem; }
+    /* 공통 섹션 스타일 (아래 “새 페이지”들) */
+    .section {
+      padding: 4rem 0;
+      background-color: #ffffff;
+    }
+    .section--light {
+      background-color: #f9fafb;
+    }
+    .section__title {
+      margin: 0 0 0.5rem;
+      font-size: 1.6rem;
+      font-weight: 700;
+    }
+    .section__subtitle {
+      margin: 0 0 1.5rem;
+      color: #6b7280;
+      max-width: 640px;
+    }
 
     /* About */
     .about__grid {
@@ -130,57 +150,80 @@
     }
     .about__main p {
       margin-top: 0;
+      margin-bottom: 0.9rem;
       line-height: 1.7;
       color: #374151;
     }
     .about__meta {
-      border: 1px solid #e5e7eb;
       border-radius: 1rem;
+      border: 1px solid #e5e7eb;
       padding: 1.3rem;
-      background: #fff;
+      background-color: #ffffff;
     }
-    .about__list { padding: 0; list-style: none; margin: 0; display: grid; gap: 0.7rem; }
+    .about__list {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      display: grid;
+      gap: 0.7rem;
+      font-size: 0.9rem;
+    }
     .about__list span {
       font-size: 0.78rem;
       color: #9ca3af;
       letter-spacing: 0.08em;
+      text-transform: uppercase;
     }
-    .about__list strong { font-size: 0.92rem; }
 
     /* Experience */
     .timeline {
       display: grid;
-      gap: 1.5rem;
+      gap: 1.4rem;
     }
     .timeline__item {
-      padding: 1.4rem;
-      background: #f9fafb;
-      border: 1px solid #e5e7eb;
+      padding: 1.3rem 1.2rem;
       border-radius: 1rem;
+      border: 1px solid #e5e7eb;
+      background-color: #f9fafb;
     }
     .timeline__meta {
       font-size: 0.8rem;
       color: #6b7280;
-      margin-bottom: 0.4rem;
+      margin-bottom: 0.35rem;
       display: flex;
-      gap: 1rem;
       flex-wrap: wrap;
+      gap: 0.75rem;
+    }
+    .timeline__title {
+      margin: 0 0 0.4rem;
+      font-size: 1rem;
+    }
+    .timeline__desc {
+      margin: 0;
+      font-size: 0.9rem;
+      color: #4b5563;
+      line-height: 1.6;
     }
 
     /* Projects */
     .cards {
       display: grid;
-      gap: 1.5rem;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 1.4rem;
     }
     .card {
-      background: #fff;
-      padding: 1.4rem;
+      padding: 1.3rem 1.2rem;
       border-radius: 1rem;
       border: 1px solid #e5e7eb;
+      background-color: #ffffff;
+    }
+    .card__title {
+      margin: 0 0 0.3rem;
+      font-size: 1rem;
     }
     .card__desc {
-      margin-top: 0.3rem;
+      margin: 0;
+      font-size: 0.9rem;
       line-height: 1.6;
       color: #4b5563;
     }
@@ -188,8 +231,8 @@
     /* Skills */
     .skills__grid {
       display: grid;
-      gap: 1.5rem;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.4rem;
     }
     .tag-list {
       display: flex;
@@ -197,49 +240,64 @@
       gap: 0.5rem;
     }
     .tag {
-      background: #e5e7eb;
-      padding: 0.35rem 0.7rem;
-      border-radius: 99px;
       font-size: 0.8rem;
+      padding: 0.35rem 0.7rem;
+      border-radius: 999px;
+      background-color: #e5e7eb;
+      color: #111827;
     }
 
     /* Contact */
     .contact__box {
-      background: #fff;
-      padding: 1.3rem;
-      border: 1px solid #e5e7eb;
+      margin-top: 0.5rem;
+      padding: 1.3rem 1.2rem;
       border-radius: 1rem;
+      border: 1px solid #e5e7eb;
+      background-color: #ffffff;
+    }
+    .contact__item {
+      margin: 0 0 0.5rem;
+      font-size: 0.95rem;
     }
     .contact__item a {
-      text-decoration: none;
       color: #2563eb;
+      text-decoration: none;
     }
-    .contact__item a:hover { text-decoration: underline; }
+    .contact__item a:hover {
+      text-decoration: underline;
+    }
 
     /* Footer */
     .footer {
+      border-top: 1px solid #e5e7eb;
+      background-color: #f9fafb;
       text-align: center;
-      padding: 1rem;
+      padding: 1rem 0;
       font-size: 0.8rem;
       color: #9ca3af;
-      border-top: 1px solid #e5e7eb;
     }
 
     @media (max-width: 768px) {
-      .about__grid { grid-template-columns: 1fr; }
-      .nav { gap: 0.5rem; }
-      .nav a { font-size: 0.8rem; }
+      .about__grid {
+        grid-template-columns: 1fr;
+      }
+      .nav {
+        gap: 0.4rem;
+      }
+      .nav a {
+        font-size: 0.8rem;
+      }
     }
   </style>
 </head>
 
 <body>
-
-  <!-- Header -->
+  <!-- 상단 헤더 (작게) -->
   <header class="header">
     <div class="container header__inner">
       <div class="logo">IM JIHOON</div>
       <nav class="nav">
+        <!-- 상단 메뉴도 동일하게 아래 “페이지”로 이동 -->
         <a href="#about">About</a>
         <a href="#experience">Experience</a>
         <a href="#projects">Projects</a>
@@ -249,43 +307,82 @@
     </div>
   </header>
 
-  <!-- Hero -->
-  <section class="hero">
-    <div class="container">
-      <p class="hero__eyebrow">Career Portfolio</p>
-      <h1 class="hero__title">
-        아랍어·국제정치·콘텐츠를 잇는<br />
-        <span class="hero__highlight">임지훈</span>입니다.
-      </h1>
-      <p class="hero__subtitle">
-        언어와 글로벌 경험을 기반으로 여행·교육·디지털 콘텐츠를 설계합니다.
-      </p>
-      <div class="hero__actions">
-        <a href="#contact" class="btn btn--primary">함께 이야기해요</a>
-        <a href="#projects" class="btn btn--ghost">프로젝트 보기</a>
+  <!-- 1. 첫 페이지: INDEX 화면 -->
+  <section class="landing">
+    <div class="container landing__inner">
+      <div>
+        <h1 class="landing__title">
+          임지훈 경력 인덱스
+        </h1>
+        <p class="landing__subtitle">
+          이 페이지는 제 경력과 프로젝트를 한눈에 볼 수 있도록 구성한
+          <strong>INDEX</strong>입니다. 아래 항목 중 하나를 선택하면
+          해당 내용을 정리한 “페이지”로 이동합니다.
+        </p>
+      </div>
+
+      <div>
+        <p class="landing__index-label">Index</p>
+        <div class="landing__grid">
+          <a class="index-card" href="#about">
+            <h2 class="index-card__title">01 · About</h2>
+            <p class="index-card__desc">간단한 자기소개, 전공, 관심 분야 요약</p>
+          </a>
+          <a class="index-card" href="#experience">
+            <h2 class="index-card__title">02 · Experience</h2>
+            <p class="index-card__desc">대외활동, 프로그램, 학업 경험 정리</p>
+          </a>
+          <a class="index-card" href="#projects">
+            <h2 class="index-card__title">03 · Projects</h2>
+            <p class="index-card__desc">여행·콘텐츠·연구 등 주요 프로젝트</p>
+          </a>
+          <a class="index-card" href="#skills">
+            <h2 class="index-card__title">04 · Skills</h2>
+            <p class="index-card__desc">언어, 도구, 관심 분야 리스트</p>
+          </a>
+          <a class="index-card" href="#contact">
+            <h2 class="index-card__title">05 · Contact</h2>
+            <p class="index-card__desc">연락 가능한 채널 안내</p>
+          </a>
+        </div>
       </div>
     </div>
   </section>
+
+  <!-- 2. 아래부터는 “새 페이지” 느낌의 섹션들 -->
 
   <!-- About -->
   <section id="about" class="section section--light">
     <div class="container">
       <h2 class="section__title">About</h2>
-      <p class="section__subtitle">간단한 자기소개를 적는 공간입니다.</p>
+      <p class="section__subtitle">
+        기본적인 자기소개와 현재 하고 있는 일, 관심사를 정리한 섹션입니다.
+      </p>
 
       <div class="about__grid">
         <div class="about__main">
-          <p>저는 한국외국어대학교에서 아랍어와 국제정치를 공부하고 있습니다.</p>
-          <p>사우디·베트남·중앙아시아 등 다양한 지역을 기반으로 콘텐츠·연구·여행 프로젝트를 진행합니다.</p>
-          <p>이 사이트는 저의 경험과 역량, 프로젝트를 정리한 포트폴리오입니다.</p>
+          <p>저는 한국외국어대학교에서 아랍어와 국제정치를 전공하고 있습니다.</p>
+          <p>사우디, 베트남, 중앙아시아 등 다양한 지역에 관심을 가지고 여행·연구·콘텐츠 제작을 병행해 왔습니다.</p>
+          <p>언어와 현지 경험을 바탕으로 사람들에게 도움이 되는 정보를 정리하고, 새로운 기회를 연결하는 데 관심이 많습니다.</p>
         </div>
-
         <div class="about__meta">
           <ul class="about__list">
-            <li><span>이름</span><strong>임지훈</strong></li>
-            <li><span>전공</span><strong>아랍어 / 국제학</strong></li>
-            <li><span>관심 분야</span><strong>여행·콘텐츠 / 국제교류</strong></li>
-            <li><span>거주지</span><strong>대한민국, 서울</strong></li>
+            <li>
+              <span>이름</span>
+              <strong>임지훈</strong>
+            </li>
+            <li>
+              <span>전공</span>
+              <strong>아랍어 / 국제학</strong>
+            </li>
+            <li>
+              <span>관심 분야</span>
+              <strong>여행·콘텐츠, 국제교류, 언어교육</strong>
+            </li>
+            <li>
+              <span>거주지</span>
+              <strong>대한민국, 서울</strong>
+            </li>
           </ul>
         </div>
       </div>
@@ -296,26 +393,36 @@
   <section id="experience" class="section">
     <div class="container">
       <h2 class="section__title">Experience</h2>
-      <p class="section__subtitle">인턴십, 대외활동, 프로그램 등을 정리합니다.</p>
+      <p class="section__subtitle">
+        프로그램 참여, 대외활동, 학업 경험 등을 연대기 형식으로 정리한 섹션입니다.
+      </p>
 
       <div class="timeline">
-        <div class="timeline__item">
+        <article class="timeline__item">
           <div class="timeline__meta">
             <span>2026.01 – 2026.03 (예정)</span>
             <span>사우디아라비아 · 리야드</span>
           </div>
-          <h3 class="timeline__title">킹살만 글로벌 아카데미 (Tourism 코스)</h3>
-          <p class="timeline__desc">사우디 언어·문화·관광을 경험하는 단기 몰입 프로그램 예정.</p>
-        </div>
+          <h3 class="timeline__title">킹살만 글로벌 아카데미 단기 몰입 프로그램 (Tourism 코스)</h3>
+          <p class="timeline__desc">
+            사우디의 언어·문화·관광을 집중적으로 경험하는 프로그램에 참가 예정입니다.
+            현지 경험을 기반으로 여행 콘텐츠 및 교육 자료로 확장할 계획입니다.
+          </p>
+        </article>
 
-        <div class="timeline__item">
+        <article class="timeline__item">
           <div class="timeline__meta">
             <span>2023 – 현재</span>
             <span>한국외국어대학교</span>
           </div>
           <h3 class="timeline__title">아랍어 및 국제학 전공</h3>
-          <p class="timeline__desc">언어·국제정치·지역 연구를 공부하고 있습니다.</p>
-        </div>
+          <p class="timeline__desc">
+            아랍어 어학, 중동 지역 연구, 국제정치·국제법 과목을 수강하며
+            언어 능력과 글로벌 이슈 이해도를 함께 쌓고 있습니다.
+          </p>
+        </article>
+
+        <!-- 여기 아래에 다른 활동들을 계속 추가하시면 됩니다 -->
       </div>
     </div>
   </section>
@@ -324,18 +431,27 @@
   <section id="projects" class="section section--light">
     <div class="container">
       <h2 class="section__title">Projects</h2>
-      <p class="section__subtitle">개발·연구·콘텐츠 프로젝트를 소개합니다.</p>
+      <p class="section__subtitle">
+        여행, 연구, 웹사이트, 영상 등 주요 프로젝트를 모아둔 섹션입니다.
+      </p>
 
       <div class="cards">
-        <div class="card">
-          <h3>여행 다이어리 / 베트남 전국일주</h3>
-          <p class="card__desc">여행 경험을 기반으로 한 다이어리·영상·블로그 콘텐츠 제작.</p>
-        </div>
+        <article class="card">
+          <h3 class="card__title">베트남 전국 일주 & 여행 다이어리</h3>
+          <p class="card__desc">
+            베트남 전국 일주 경험을 바탕으로 여행 다이어리 템플릿과
+            블로그/영상 콘텐츠를 제작했습니다. 실제 여행자에게 도움이 되는
+            정보 정리와 기록 방식을 고민했습니다.
+          </p>
+        </article>
 
-        <div class="card">
-          <h3>아랍어 학습 웹사이트</h3>
-          <p class="card__desc">아랍어 필사·문장 연습용 개인 학습 사이트 개발.</p>
-        </div>
+        <article class="card">
+          <h3 class="card__title">아랍어 학습용 웹사이트</h3>
+          <p class="card__desc">
+            아랍어 알파벳, 단어, 문장을 필사하고 연습할 수 있는 개인용 사이트를
+            기획·제작하고 있습니다. 추후 오픈형 학습 자료로 발전시키는 것을 목표로 합니다.
+          </p>
+        </article>
       </div>
     </div>
   </section>
@@ -344,16 +460,18 @@
   <section id="skills" class="section">
     <div class="container">
       <h2 class="section__title">Skills</h2>
-      <p class="section__subtitle">언어, 도구, 관심 분야 정리</p>
+      <p class="section__subtitle">
+        언어, 도구, 관심 분야를 한눈에 정리한 섹션입니다.
+      </p>
 
       <div class="skills__grid">
         <div>
           <h3>Languages</h3>
           <div class="tag-list">
-            <span class="tag">한국어</span>
+            <span class="tag">한국어 (Native)</span>
             <span class="tag">영어</span>
             <span class="tag">아랍어</span>
-            <span class="tag">베트남어</span>
+            <span class="tag">베트남어 (학습 중)</span>
           </div>
         </div>
 
@@ -371,12 +489,11 @@
           <h3>Interests</h3>
           <div class="tag-list">
             <span class="tag">여행 콘텐츠</span>
-            <span class="tag">국제교류</span>
-            <span class="tag">중동·베트남 연구</span>
+            <span class="tag">국제교류 프로그램</span>
+            <span class="tag">중동·베트남 지역 연구</span>
           </div>
         </div>
       </div>
-
     </div>
   </section>
 
@@ -384,14 +501,18 @@
   <section id="contact" class="section section--light">
     <div class="container">
       <h2 class="section__title">Contact</h2>
-      <p class="section__subtitle">연락하고 싶다면 아래로</p>
+      <p class="section__subtitle">
+        함께 이야기해보고 싶으시다면 아래 채널로 연락해 주세요.
+      </p>
 
       <div class="contact__box">
         <p class="contact__item">
-          이메일: <a href="mailto:example@email.com">
+          이메일:
+          <a href="mailto:example@email.com">
             example@email.com
           </a>
         </p>
+        <!-- 필요하다면 블로그, 유튜브, 링크드인 링크도 여기에 추가 -->
       </div>
     </div>
   </section>
@@ -401,8 +522,7 @@
   </footer>
 
   <script>
-    document.getElementById("year").textContent = new Date().getFullYear();
+    document.getElementById('year').textContent = new Date().getFullYear();
   </script>
-
 </body>
 </html>
